--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                     </div>
                 </div>
                 <div class="sub-text-wrapper">
-                    <div class="text">
-                        <h2>Designer</h2><h2>&</h2><h2>Developer</h2>
+                    <div class="text"><h2>Designer</h2><h2>&</h2><h2>Developer</h2>
                     </div>
                 </div>
                 <div class="right">
@@ -53,11 +52,19 @@
             </div>
             <div class="about-section">
                 <div class="text-wrapper">
-                      <div class="title-wrapper"><h2>Hello,</h2></div>
+                    <div class="title-wrapper">
+                        <h2>Hello,</h2></div>
                     <p>I'm Sabrina Kantor, a Designer and Developer living in Boston. I am currently pursuing a degree in Computer Science and Interactive media at Northeastern University. I am passionate about exploring the intersection of art, design and
                         technology. Take a look at my work.</p>
+                        <div class="contact">
+                            <a href="mailto:kantor.sa@husky.neu.edu"><p>email</p></a><div class=line></div> <a href="https://www.linkedin.com/in/sabrina-kantor-610354b5/"><p>linkedin</p></a><div class=line></div><a href="https://github.com/kantors"><p>github</a></p>
+                        </div>
+
+                    <!-- <div class="icon-wrapper">
+                        <p>kantor.sa@husky.neu.edu</p>
                         <img class="icon" src="assets/github-icon.svg"></img>
                         <img class="icon" src="assets/linkedin-icon.svg"></img>
+                    </div> -->
                 </div>
             </div>
 
@@ -66,14 +73,15 @@
                 <div id="deschutes" class="project portfolio-item">
                     <a href="http://www.sabrinakantor.com/work/deschutes-river-guide.html">
                         <div class="portfolio-item-text">
-                          <p>Design & Development</p>
+                            <p>Design & Development</p>
                             <h1>Deschutes River </br> Guide</h1>
                             <div class="view-work">
-                              <p>view work</p>
-                            <div class="line"></div></div>
+                                <p>view work</p>
+                                <div class="line"></div>
                             </div>
+                        </div>
                         <div class=" portfolio-item-image ">
-                            <img src="work/images/deschutes-river-guide-main.png">
+                            <img src="work/images/deschutes-main.png">
                             <img src="work/images/deschutes-2.png">
                         </div>
                         < </a>
@@ -85,9 +93,10 @@
                             <p>Design & Development</p>
                             <h1>Zealery </h1>
                             <div class="view-work">
-                              <p>view work</p>
-                            <div class="line"></div></div>
-                          </div>
+                                <p>view work</p>
+                                <div class="line"></div>
+                            </div>
+                        </div>
                         <div class=" portfolio-item-image ">
                             <img src="work/images/zealery-main.png">
                         </div>
@@ -101,9 +110,10 @@
                             <p>Development</p>
                             <h1>Macro Market</h1>
                             <div class="view-work">
-                              <p>view work</p>
-                            <div class="line"></div></div>
+                                <p>view work</p>
+                                <div class="line"></div>
                             </div>
+                        </div>
                         <div class="portfolio-item-image ">
                             <img src="work/images/macro-market-main.png">
                         </div>
@@ -115,9 +125,10 @@
                             <p>Design & Development</p>
                             <h1>Music Visualizer</h1>
                             <div class="view-work">
-                              <p>view work</p>
-                            <div class="line"></div></div>
-                          </div>
+                                <p>view work</p>
+                                <div class="line"></div>
+                            </div>
+                        </div>
                         <div class=" portfolio-item-image ">
                             <img src="work/images/music-visualizer-main.jpg">
                         </div>
@@ -131,8 +142,9 @@
                             <p>Design</p>
                             <h1>Graphic Design</h1>
                             <div class="view-work">
-                              <p>view work</p>
-                            <div class="line"></div></div>
+                                <p>view work</p>
+                                <div class="line"></div>
+                            </div>
                         </div>
                         <div class=" portfolio-item-image ">
                             <img src="work/images/run.jpg">
