--- a/work/deschutes-river-guide.html
+++ b/work/deschutes-river-guide.html
@@ -28,28 +28,35 @@
                 <div class="text-wrapper">
                     <p class="type">Design & Development</p>
                     <h1>Deschutes River </br> Country Guide</h1>
-                    <p>Exploring form and shape for graphic design 1.</p>
+                    <a href="https://central-or.com">
+                        <div class="button">View the Site</div>
+                    </a>
                 </div>
                 <div class="image-wrapper">
-                    <img src="images/deschutes-river-guide-main.png"></img>
+                    <img src="images/deschutes-main.png"></img>
                 </div></div>
+            </div>
+            <div class="section info-section text-section hideme">
+                <div class="info-wrapper">
+                    <div class="sub-section">
+                        <h2>Type Of Work</h2>
+                        <p>Web Design, Wordpress Development</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Context</h2>
+                        <p>Marketing site for the eBook Deschutes River Guide</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Year</h2>
+                        <p>2017</p>
+                    </div>
+                </div>
             </div>
             <div class="section text-section hideme">
                 <div class="text-wrapper">
-                    <h1>1. HIERARCHY COMPOSITIONS</h1>
-                    <div class="sub-section">
-                        <h2>Model</h2>
-                        <p>Micheal Rascati</p>
-                    </div>
-                    <div class="sub-section">
-                        <h2>Material</h2>
-                        <p>Can-opener, Charcoal</p>
-                    </div>
-
-                    <p>The purpose of this project was to explore how color, shape and size effect the order in which elements are read in a composition. Each poster incorporates typeography, letterform, linework, photography of a mechanical object and photography
-                        of a body part. This was a 6 week project where the first iterations only contained two elements. Each week, we added another element and focused on creating compositions where different elements read first.</p>
-
-
+                  <p>The Deschutes River Guide is short e-book that describes Central Oregon's history.
+                    The site was designed to showcase the e-book as well as Central Oregon's beauty.</p>
+                    <p>I began the development of the custom Wordpress Theme by building off the starter template </p>
                 </div>
 
             </div>
@@ -65,24 +72,7 @@
             <div class="image-section hideme">
                 <div class="image-wrapper"><img class="section-image" src="images/punctuality.jpg"></div>
             </div>
-            <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/twist.jpg"></div>
-            </div>
-            <div class="section text-section hideme">
-                <div class="text-wrapper">
-                    <h1>2. CONCEPT POSTER</h1>
-                    <div class="sub-section">
-                        <h2>Model</h2>
-                        <p>Guy Rice</p>
-                    </div>
 
-                    <p>Our final project in this course was to create a poster for either a play or a book. The goal of this project was to use our understanding of visual heirarchy to portray a complex narriatve to our viewers. I choose Fahrenheit 451 as
-                        it is one of my favorite books.</p>
-
-
-                </div>
-
-            </div>
             <div class="image-section hideme">
                 <div class="image-wrapper"><img class="section-image" src="images/fahrenheit451.jpg"></div>
             </div>
