--- a/work/graphic-design.html
+++ b/work/graphic-design.html
@@ -28,66 +28,68 @@
                     <div class="text-wrapper">
                         <p class="type">Design</p>
                         <h1>Graphic Design </br> Course Work</h1>
-                        <p>Exploring form and shape for graphic design 1.</p>
                     </div>
                     <div class="image-wrapper">
                         <img src="images/run.jpg"></img>
                     </div>
                 </div>
             </div>
+            <div class="section info-section text-section hideme">
+                <div class="info-wrapper">
+                    <div class="sub-section">
+                        <h2>Type Of Work</h2>
+                        <p>Graphic Design, Photography</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Context</h2>
+                        <p>Exploring form and shape for graphic design 1</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Year</h2>
+                        <p>2016</p>
+                    </div>
+                </div>
+            </div>
             <div class="section text-section hideme">
-                <div class="text-wrapper">
-                  <div class="line"></div>
-                    <h3>Hierarchy Compositions</h3>
-                    <div class="sub-section">
-                        <h2>Model</h2>
-                        <p>Micheal Rascati</p>
+                <div class="bg">
+                    <div class="text-wrapper">
+
+                        <h3>Hierarchy Compositions</h3>
+                        <p>The purpose of this project was to explore how color, shape and size effect the order in which elements are read in a composition. Each poster incorporates typeography, letterform, linework, photography of a mechanical object and
+                            photography of a body part. This was a 6 week project where the first iterations only contained two elements. Each week, we added another element and focused on creating compositions where different elements read first.</p>
                     </div>
-                    <div class="sub-section">
-                        <h2>Material</h2>
-                        <p>Can-opener, Charcoal</p>
-                    </div>
-
-                    <p>The purpose of this project was to explore how color, shape and size effect the order in which elements are read in a composition. Each poster incorporates typeography, letterform, linework, photography of a mechanical object and photography
-                        of a body part. This was a 6 week project where the first iterations only contained two elements. Each week, we added another element and focused on creating compositions where different elements read first.</p>
-
-
                 </div>
 
             </div>
             <div class="image-section hideme">
-                <div class="image-wrapper">
-                    <h2>1</h2>
-                    <div class="line"></div>
-                    <img class="section-image" src="images/run.jpg"></div>
+                <div class="image-wrapper two-images-stagger">
+                    <img class="section-image" src="images/run.jpg">
+                    <img class="section-image" src="images/slide.jpg">
+                </div>
             </div>
+
             <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/slide.jpg"></div>
+                <div class="image-wrapper two-images-stagger"><img class="section-image" src="images/punctuality.jpg">
+                    <img class="section-image" src="images/twist.jpg">
+                </div>
             </div>
-            <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/punctuality.jpg"></div>
-            </div>
-            <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/twist.jpg"></div>
-            </div>
+
             <div class="section text-section hideme">
-                <div class="text-wrapper">
-                    <h1>2. CONCEPT POSTER</h1>
-                    <div class="sub-section">
-                        <h2>Model</h2>
-                        <p>Guy Rice</p>
+                <div class="bg">
+                    <div class="text-wrapper">
+                        <h3>Concept Poster</h3>
+                        <p>Our final project in this course was to create a poster for either a play or a book. The goal of this project was to use our understanding of visual heirarchy to portray a complex narriatve to our viewers. I choose Fahrenheit 451
+                            as it is one of my favorite books.</p>
                     </div>
-
-                    <p>Our final project in this course was to create a poster for either a play or a book. The goal of this project was to use our understanding of visual heirarchy to portray a complex narriatve to our viewers. I choose Fahrenheit 451 as
-                        it is one of my favorite books.</p>
-
-
                 </div>
 
             </div>
             <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/fahrenheit451.jpg"></div>
+                <div class="image-wrapper two-images-stagger">
+                    <img class="section-image" src="images/fahrenheit451.jpg">
+                </div>
             </div>
+
         </div>
     </div>
     </div>
