--- a/work/macro-market.html
+++ b/work/macro-market.html
@@ -14,7 +14,10 @@
     <div class="content-wrapper macro-market portfolio-page">
         <div class="navigation">
             <ul>
-                <li><a href="../index.html"><img src="../assets/logo.svg"></a></img></li>
+                <li>
+                    <a href="../index.html"><img src="../assets/logo.svg"></a>
+                    </img>
+                </li>
                 <li class="link"><a href="work.html">Work</a></li>
                 <li class="link">Resume</li>
             </ul>
@@ -25,7 +28,6 @@
                     <div class="text-wrapper">
                         <p class="type">Development</p>
                         <h1>Macro Market</h1>
-                        <p>Exploring form and shape for graphic design 1.</p>
                         <a href="https://macro.market">
                             <div class="button">View the Beta Site</div>
                         </a>
@@ -35,13 +37,29 @@
                     </div>
                 </div>
             </div>
+            <div class="section info-section text-section hideme">
+                <div class="info-wrapper">
+                    <div class="sub-section">
+                        <h2>Type Of Work</h2>
+                        <p>Database, Full Stack Development</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Context</h2>
+                        <p>Web Application built during my internship at Datawheel</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Year</h2>
+                        <p>2017</p>
+                    </div>
+                </div>
+            </div>
             <div class="section text-section hideme">
-                <div class="text-wrapper">
-                  <p>Macro Market is a web application I started the development on as an intern at Datawheel.
-                    The site allows companies to register and list themselves under the products and countries they
-                    import and export to. The site is currently populated with seeder data as well as real companies from the Connect
-                    Americas API. I built the site using React, NodeJs and postgreSQL.
-                  </p>
+                <div class="bg">
+                    <div class="text-wrapper">
+                        <p>Macro Market is a web application I started the development on as an intern at Datawheel. The site allows companies to register and list themselves under the products and countries they import and export to. The site is currently
+                            populated with seeder data as well as real companies from the Connect Americas API. I built the site using React, NodeJs and postgreSQL.
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="image-section hideme">
