--- a/work/zealery.html
+++ b/work/zealery.html
@@ -29,7 +29,6 @@
                     <div class="text-wrapper">
                         <p class="type">Design & Development</p>
                         <h1>Zealery</h1>
-                        <p>A social shopping app built using AngularJs.</p>
                         <a href="https://itunes.apple.com/us/app/zealery/id1129525914?mt=8">
                             <div class="button">Download the App</div>
                         </a>
@@ -39,43 +38,56 @@
                     </div>
                 </div>
             </div>
-            <div class="section text-section hideme">
-                <div class="text-wrapper">
-                    <p>Zealery is a social shopping app designed to give users the experience of shopping with friends. Users can see clothing recommendations, browse by style and view what clothing their friends have liked. It was important to our clients
-                        that the app was a fun way users could get their friends opinions while shopping online. As a result, there is a Runway feature where users can ask their friends to vote on different pieces of clothing.
-                    </p>
-
-
-
-                    <p> We started off the project in a research and discovery phase where we worked closely with the client to define brand and audience. As part of this stage, we developed surveys for market research, anaylized the survey responses and
-                        created user personas. From there we began wireframing, first in paper and then eventually taking the designs into Balsamic.
-                    </p>
-
-                    <p> As the rest of the team continued to iterate on our designs, I began development on the app. Our client came to us with an existing backend for the app using Ionic and powered by the ShopStyle API. I implemented my teams designs on
-                        the frontend using AngluarJs.
-                    </p>
-                  </div>
+            <div class="section info-section text-section hideme">
+                <div class="info-wrapper">
+                    <div class="sub-section">
+                        <h2>Type Of Work</h2>
+                        <p>UI/UX, Front End Development</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Context</h2>
+                        <p>Client project for Scout Studio</p>
+                    </div>
+                    <div class="sub-section">
+                        <h2>Year</h2>
+                        <p>2016</p>
+                    </div>
                 </div>
-
-                <div class="image-section hideme">
-                    <div class="image-wrapper two-images">
-                        <img src="images/zealery-search-filter.png">
-                        <img class="section-image" src="images/zealery-filter.png"></div>
-                </div>
-                <div class="image-section hideme">
-                    <div class="image-wrapper two-images-stagger">
-                        <img class="section-image" src="images/zealery-main.png">
-                        <img class="section-image" src="images/zealery-wishlist.png"></div>
-                </div>
-
-                <div class="image-section hideme">
-                    <div class="image-wrapper two-images-horizontal">
-                        <img class="section-image" src="images/zealery-battle-2.png">
-                        <img class="section-image" src="images/zealery-battle.png"></div>
-                </div>
-
             </div>
+            <div class="section text-section hideme">
+                <div class="bg">
+                    <div class="text-wrapper">
+                        <p>Zealery is a social shopping app designed to give users the experience of shopping with friends. Users can see clothing recommendations, browse by style and view what clothing their friends have liked. It was important to our clients
+                            that the app was a fun way users could get their friends' opinions while shopping online. As a result, there is a Runway feature where users can ask their friends to vote on different pieces of clothing.
+                        </p>
+
+                        <!-- <p> We started off the project in a research and discovery phase where we worked closely with the client to define brand and audience. From there we began wireframing, first in paper and then eventually taking the designs into Balsamic.
+                            As the rest of the team continued to iterate on our designs, I began development on the app. Our client came to us with an existing backend for the app using Ionic and powered by the ShopStyle API. I implemented my team's designs
+                            on the Front End using AngluarJs.
+                        </p> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="image-section hideme">
+                <div class="image-wrapper two-images">
+                    <img src="images/zealery-search-filter.png">
+                    <img class="section-image" src="images/zealery-filter.png"></div>
+            </div>
+            <div class="image-section hideme">
+                <div class="image-wrapper two-images-stagger">
+                    <img class="section-image" src="images/zealery-main.png">
+                    <img class="section-image" src="images/zealery-wishlist.png"></div>
+            </div>
+
+            <div class="image-section hideme">
+                <div class="image-wrapper two-images-horizontal">
+                    <img class="section-image" src="images/zealery-battle-2.png">
+                    <img class="section-image" src="images/zealery-battle.png"></div>
+            </div>
+
         </div>
+    </div>
     </div>
 </body>
 
