added open sans

--- a/work/graphic-design.html
+++ b/work/graphic-design.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,700i,800" rel="stylesheet">
     <script src="../main.js"></script>
     <script src="../js/portfolio.js"></script>
 </head>
@@ -53,8 +54,7 @@
             <div class="section text-section hideme">
                 <div class="bg">
                     <div class="text-wrapper">
-
-                        <h3>Hierarchy Compositions</h3>
+                        <h3>Hierarhy Compositions</h3>
                         <p>The purpose of this project was to explore how color, shape and size effect the order in which elements are read in a composition. Each poster incorporates typeography, letterform, linework, photography of a mechanical object and
                             photography of a body part. This was a 6 week project where the first iterations only contained two elements. Each week, we added another element and focused on creating compositions where different elements read first.</p>
                     </div>
