--- a/work/zealery.html
+++ b/work/zealery.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link rel="stylesheet" href="../main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,700i,800" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../main.js"></script>
     <script src="../js/portfolio.js"></script>
@@ -58,7 +58,7 @@
                 <div class="bg">
                     <div class="text-wrapper">
                         <p>Zealery is a social shopping app designed to give users the experience of shopping with friends. Users can see clothing recommendations, browse by style and view what clothing their friends have liked. It was important to our clients
-                            that the app was a fun way users could get their friends' opinions while shopping online. As a result, there is a Runway feature where users can ask their friends to vote on different pieces of clothing.
+                            that the app was a fun way users could get their friends opinions while shopping online. As a result, there is a Runway feature where users can ask their friends to vote on different pieces of clothing.
                         </p>
 
                         <!-- <p> We started off the project in a research and discovery phase where we worked closely with the client to define brand and audience. From there we began wireframing, first in paper and then eventually taking the designs into Balsamic.
