added Open Sans

--- a/work/graphic-design.html
+++ b/work/graphic-design.html
@@ -56,7 +56,7 @@
                     <div class="text-wrapper">
                         <h3>Hierarhy Compositions</h3>
                         <p>The purpose of this project was to explore how color, shape and size effect the order in which elements are read in a composition. Each poster incorporates typeography, letterform, linework, photography of a mechanical object and
-                            photography of a body part. This was a 6 week project where the first iterations only contained two elements. Each week, we added another element and focused on creating compositions where different elements read first.</p>
+                            photography of a body part. This was a 6 week project where each week, we added another element focusing on creating compositions where different elements read first.</p>
                     </div>
                 </div>
 
