--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
                     </img>
                 </li>
                 <li id="work-link" class="link">Work</li>
-                <li class="link"><a>Resume</a></li>
+                  <li class="link"><a href="assets/resume.pdf">Resume</a></li>
             </ul>
         </div>
         <div class="content">
             <div class="header">
-                <!-- <img class="logo" src="assets/logo2.svg"></img> -->
-
                 <div class="outline"></div>
                 <div class="text-wrapper">
                     <div class="text">
@@ -59,19 +57,13 @@
                         <div class="contact">
                             <a href="mailto:kantor.sa@husky.neu.edu"><p>email</p></a><div class=line></div> <a href="https://www.linkedin.com/in/sabrina-kantor-610354b5/"><p>linkedin</p></a><div class=line></div><a href="https://github.com/kantors"><p>github</a></p>
                         </div>
-
-                    <!-- <div class="icon-wrapper">
-                        <p>kantor.sa@husky.neu.edu</p>
-                        <img class="icon" src="assets/github-icon.svg"></img>
-                        <img class="icon" src="assets/linkedin-icon.svg"></img>
-                    </div> -->
                 </div>
             </div>
 
             <div id="work-section" class="portfolio">
 
                 <div id="deschutes" class="project portfolio-item">
-                    <a href="http://www.sabrinakantor.com/work/deschutes-river-guide.html">
+                    <a href="work/deschutes-river-guide.html">
                         <div class="portfolio-item-text">
                             <p>Design & Development</p>
                             <h1>Deschutes River </br> Guide</h1>
@@ -87,7 +79,7 @@
                         < </a>
                 </div>
                 <div id="zealery" class="project portfolio-item">
-                    <a href="http://www.sabrinakantor.com/work/zealery.html">
+                    <a href="work/zealery.html">
 
                         <div class="portfolio-item-text">
                             <p>Design & Development</p>
@@ -105,7 +97,7 @@
                 </div>
 
                 <div id="macro" class="project portfolio-item">
-                    <a href="http://www.sabrinakantor.com/work/macro-market.html">
+                    <a href="work/macro-market.html">
                         <div class="portfolio-item-text">
                             <p>Development</p>
                             <h1>Macro Market</h1>
@@ -120,7 +112,7 @@
                     </a>
                 </div>
                 <div id="music-visualizer" class="project portfolio-item">
-                    <a href="http://www.sabrinakantor.com/work/graphic-design.html">
+                    <a href="work/music-visualizer.html">
                         <div class="portfolio-item-text">
                             <p>Design & Development</p>
                             <h1>Music Visualizer</h1>
@@ -137,7 +129,7 @@
                 </div>
 
                 <div id="graphic-design" class="project portfolio-item">
-                    <a href="http://www.sabrinakantor.com/work/graphic-design.html">
+                    <a href="work/graphic-design.html">
                         <div class="portfolio-item-text">
                             <p>Design</p>
                             <h1>Graphic Design</h1>
