--- a/work/deschutes-river-guide.html
+++ b/work/deschutes-river-guide.html
@@ -19,8 +19,8 @@
                     <a href="../index.html"><img src="../assets/logo.svg"></a>
                     </img>
                 </li>
-                <li class="link"><a href="work.html">Work</a></li>
-                <li class="link">Resume</li>
+                <li class="link"><a href="../index.html#work-section">Work</a></li>
+                <li class="link"><a href="../assets/resume.pdf">Resume</a></li>
             </ul>
         </div>
         <div class="content">
@@ -56,26 +56,17 @@
             <div class="section text-section hideme">
                 <div class="text-wrapper">
                   <p>The Deschutes River Guide is short e-book that describes Central Oregon's history.
-                    The site was designed to showcase the e-book as well as Central Oregon's beauty.</p>
-                    <p>I began the development of the custom Wordpress Theme by building off the starter template </p>
+                    The site was designed to showcase the e-book as well as Central Oregon's beauty.
+                    I began the development of the custom Wordpress theme by building off the starter theme, Underscores.
+                   </p>
                 </div>
 
             </div>
             <div class="image-section hideme">
-                <div class="image-wrapper">
-                    <h2>1</h2>
-                    <div class="line"></div>
-                    <img class="section-image" src="images/run.jpg"></div>
+                <div class="image-wrapper"><img class="section-image" src="images/deschutes-2.png"></div>
             </div>
             <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/slide.jpg"></div>
-            </div>
-            <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/punctuality.jpg"></div>
-            </div>
-
-            <div class="image-section hideme">
-                <div class="image-wrapper"><img class="section-image" src="images/fahrenheit451.jpg"></div>
+                <div class="image-wrapper"><img class="section-image" src="images/deschutes-main.png"></div>
             </div>
         </div>
     </div>
