--- a/work/graphic-design.html
+++ b/work/graphic-design.html
@@ -13,16 +13,16 @@
 
 <body>
     <div class="content-wrapper graphic-design portfolio-page">
-        <div class="navigation">
-            <ul>
-                <li>
-                    <a href="../index.html"><img src="../assets/logo.svg"></a>
-                    </img>
-                </li>
-                <li class="link"><a href="../work.html">Work</a></li>
-                <li class="link">Resume</li>
-            </ul>
-        </div>
+      <div class="navigation">
+          <ul>
+              <li>
+                  <a href="../index.html"><img src="../assets/logo.svg"></a>
+                  </img>
+              </li>
+              <li class="link"><a href="../index.html#work-section">Work</a></li>
+              <li class="link"><a href="../assets/resume.pdf">Resume</a></li>
+          </ul>
+      </div>
         <div class="content">
             <div class="portfolio-header">
                 <div class="hidden-header">
