--- a/work/music-visualizer.html
+++ b/work/music-visualizer.html
@@ -42,15 +42,26 @@
 <body>
     <div id="loader"></div>
     <div class="content-wrapper macro-market portfolio-page">
-        <div class="navigation">
-            <ul>
-                <li>
-                    <a href="../index.html"><img src="../assets/logo.svg"></a>
-                    </img>
-                </li>
-                <li class="link"><a href="work.html">Work</a></li>
-                <li class="link">Resume</li>
-            </ul>
+      <div class="navigation">
+          <ul>
+              <li>
+                  <a href="../index.html"><img src="../assets/logo.svg"></a>
+                  </img>
+              </li>
+              <li class="link"><a href="../index.html#work-section">Work</a></li>
+              <li class="link"><a href="../assets/resume.pdf">Resume</a></li>
+          </ul>
+      </div>
+
+
+
+
+        <div class="section text-section ">
+            <div class="text-wrapper">
+                <p>This is a music visualizer that I created using a javascript libary called p5. Using the P5 sound libary I was able to choose a sampling of frequencies that I then mapped to each line. The length of each line corresponds to the amplitude
+                    of each frequency. The distance that the dot at the end of the line travels corresponds to the overall amplitude of the music. Press play and mess around with the sliders and invert button! </p>
+            </div>
+
         </div>
         <div id="wrapper" class="music-main">
             <div id="music-container"></div>
@@ -60,16 +71,6 @@
                 <div id="sliderR"></div>
                 <div id="sliderB"></div>
                 <div id="sliderG"></div>
-            </div>
-
-        </div>
-
-
-
-        <div class="section text-section ">
-            <div class="text-wrapper">
-                <p>This is a music visualizer that I created using a javascript libary called p5. Using the P5 sound libary I was able to choose a sampling of frequencies that I then mapped to each line. The length of each line corresponds to the amplitude
-                    of each frequency. The distance that the dot at the end of the line travels corresponds to the overall amplitude of the music. Press play and mess around with the sliders and invert button! </p>
             </div>
 
         </div>
